--- a/style.css
+++ b/style.css
@@ -63,3 +63,15 @@ button {
 	fill: #ffffff;
 }
 
+#ecedit {
+	background-color: #4f5e77;
+	border: 4px solid #324c77;
+
+	padding: 4px;
+
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+}
+
