--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
+html {
+	background-color: black;
+}
+
 body {
-	background-color: #050505;
+	background-color: #202225;
+	background-color: #2f3136;
+	background-color: #181922;
+
 	text-align: center;
 	margin: 0px;
+	height: 100%;
 	font-size: 18px;
-	font-family: 'Arial';
+	font-family: 'Roboto';
 }
 
 button {
@@ -21,15 +29,11 @@ button {
 }
 
 #chart-div {
-	display: inline-block;
-	margin-top: 20px;
-	width: 30vw;
+	width: 25vw;
 }
 
 #map-div {
-	display: inline-block;
-	margin-top: 15px;
-	width: 60vw;
+	width: 65vw;
 }
 
 #toolbar-div {
@@ -38,18 +42,38 @@ button {
 }
 
 #legend-div {
+	border-color: #2f3136;
 
 }
 
+#application {
+	margin-top: 10px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 .legend-button {
+	font-family: 'Roboto';
+	font-weight: 'bold';
 	display: inline-block;
 	cursor: pointer;
-	border: 4px solid #4f5e77;
-	border-top: 2px solid #4f5e77;
+	border: 5px solid #2f3136;
+	border-top: 2px solid #2f3136;
+	border-color: inherit;
 	border-radius: 0px 0px 4px 4px;
 	margin-left: 3px;
 	margin-right: 3px;
 	vertical-align: top;
+	
+	box-shadow: 0px 2px 4px #000000;
+	min-width: 16px;
+	min-height: 16px;
+	z-index: -1;
+}
+
+.legend-button-text {
+	border-style: none;
 }
 
 .delete {
