--- a/style.css
+++ b/style.css
@@ -3,15 +3,15 @@ html {
 }
 
 body {
-	background-color: #202225;
-	background-color: #2f3136;
 	background-color: #181922;
 
 	text-align: center;
 	margin: 0px;
 	height: 100%;
-	font-size: 18px;
+	width: 100%;
+	
 	font-family: 'Roboto';
+	font-size: 18px;
 }
 
 button {
@@ -26,6 +26,17 @@ button {
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+}
+
+#outlines {
+	stroke-width: 1.5px;;
+}
+
+#text {
+	font-family: 'Roboto';
+	font-size: 16px;
+	font-weight: medium;
+	pointer-events: none;
 }
 
 #chart {
@@ -58,7 +69,7 @@ button {
 
 .legend-button {
 	font-family: 'Roboto';
-	font-weight: 'bold';
+	font-weight: '1000';
 	display: inline-block;
 	cursor: pointer;
 	border: 4px solid #2f3136;
@@ -84,15 +95,13 @@ button {
 	background-color: #ffffff;
 }
 
+
 .state {
 	cursor: pointer;
 	fill: #ffffff;
 	stroke: #000000;
 	stroke-width: 1.5;
-}
-
-.rect {
-	stroke-width: 7;
+	color: red;
 }
 
 #ecedit {
