--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ button {
 	color: red;
 }
 
-#ecedit {
+.popup {
 	display: none;
 	background-color: #ffffff;
 	border: 3px solid #000000;
@@ -118,7 +118,7 @@ button {
 	transform: translate(-50%, -50%);
 }
 
-#ecedit button {
+.popup button {
 	border: none;
 	color: black;
 	background-color: #cfcfcf;
