--- a/style/menu.css
+++ b/style/menu.css
@@ -1,8 +1,11 @@
 #menu-div {
+	z-index: 2;
 	background-color: #2f3136;
 	text-align: left;
 
 	box-shadow: 0px 2px 4px #000000;
+
+	position: relative;
 
 	display: flex;
 	align-items: stretch;
@@ -79,7 +82,6 @@
 	position: absolute;
 	background-color: #ffffff;
 	min-width: 140px;
-	z-index: 1;
 }
 
 #menu-right .dropdown-content {
