--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,8 @@ body {
 	
 	font-family: 'Roboto';
 	font-size: 18px;
+	display: flex;
+	flex-flow: column;
 }
 
 button {
@@ -39,14 +41,28 @@ button {
 }
 
 #chart {
+
 }
 
 #chart-div {
-	width: 25vw;
+	position: fixed;
+	bottom: 0%;
+	width: 22vw;
+	pointer-events: none;
+	margin: 40px;
+}
+
+#svgdata {
+	width: 100vw;
+	height: 100vh;
 }
 
 #map-div {
-	width: 65vw;
+	position: fixed;
+	top: 0;
+	left: 0;	
+	width: 100%;
+	height: 100%;
 }
 
 #toolbar-div {
@@ -56,6 +72,8 @@ button {
 
 #legend-div {
 	border-color: #2f3136;
+	z-index: 1;
+	pointer-events: none;
 }
 
 #application {
@@ -82,6 +100,8 @@ button {
 	box-shadow: 0px 2px 4px #000000;
 	min-width: 16px;
 	min-height: 16px;
+	
+	pointer-events: auto;
 }
 
 .legend-button-text {
