--- a/style/style.css
+++ b/style/style.css
@@ -45,11 +45,16 @@ button {
 }
 
 #chart-div {
-	position: fixed;
-	bottom: 0%;
-	width: 22vw;
+	width: 30vw;
+	height: 100vh;
 	pointer-events: none;
-	margin: 40px;
+	padding: 15px;
+	border: 1px solid black;
+	box-shadow: 1px 0px 4px #000000;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 1;
 }
 
 #svgdata {
@@ -58,11 +63,8 @@ button {
 }
 
 #map-div {
-	position: fixed;
-	top: 0;
-	left: 0;	
-	width: 100%;
-	height: 100%;
+	flex-grow: 1;
+	overflow: hidden;
 }
 
 #toolbar-div {
@@ -77,11 +79,12 @@ button {
 }
 
 #application {
-	margin-top: 10px;
+	position: fixed;
+	width: 100vw;
+	height: 100vh;
 	display: flex;
 	justify-content: center;
-	vertical-align: middle;
-	align-items: center;
+	align-items:center;
 }
 
 .legend-button {
