--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,6 @@
 html {
 	background-color: black;
+	height: 100%;
 }
 
 body {
@@ -40,15 +41,34 @@ button {
 	pointer-events: none;
 }
 
+#application {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	overflow: hidden;
+}
+
+#legend-div {
+	position: absolute;
+	border-color: #2f3136;
+	z-index: 1;
+	pointer-events: none;
+	top: 0;
+}
+
 #chart {
 
 }
 
 #chart-div {
-	width: 30vw;
-	height: 100vh;
+	width: 28vw;
+	height: 100%;
+	padding-left: 15px;
+	padding-right: 15px;
 	pointer-events: none;
-	padding: 15px;
 	border: 1px solid black;
 	box-shadow: 1px 0px 4px #000000;
 	display: flex;
@@ -60,7 +80,7 @@ button {
 
 #logo {
 	display: none;
-	width: 45%;
+	width: 50%;
 	height: auto;
 	margin-top: 50px;
 	border: 2px solid black;
@@ -69,33 +89,18 @@ button {
 }
 
 #svgdata {
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 }
 
 #map-div {
-	flex-grow: 1;
-	overflow: hidden;
+	width: 100%;
+	height: 100%;
 }
 
 #toolbar-div {
 	color: white;
 	text-align: right;
-}
-
-#legend-div {
-	border-color: #2f3136;
-	z-index: 1;
-	pointer-events: none;
-}
-
-#application {
-	position: fixed;
-	width: 100vw;
-	height: 100vh;
-	display: flex;
-	justify-content: center;
-	align-items:center;
 }
 
 .legend-button {
@@ -127,7 +132,6 @@ button {
 	height: 20px;
 	background-color: #ffffff;
 }
-
 
 .state {
 	cursor: pointer;
