--- a/app/style/style.css
+++ b/app/style/style.css
@@ -80,9 +80,10 @@ button {
 
 #logo {
 	display: none;
-	width: 50%;
+	width: 40%;
 	height: auto;
-	margin-top: 50px;
+	margin-top: 30px;
+	margin-bottom: 50px;
 	border: 2px solid black;
 	border-radius: 10px;
 	box-shadow: 1px 1px 3px black;
