side bar disappears for no chart, logo has top margin

--- a/app/style/style.css
+++ b/app/style/style.css
@@ -85,6 +85,7 @@ button {
 	border: 2px solid black;
 	border-radius: 10px;
 	box-shadow: 1px 1px 3px black;
+	margin-top: 25px;
 	margin-bottom: 25px;
 }
 
