--- a/style.css
+++ b/style.css
@@ -11,15 +11,12 @@ body {
 
 #info {
 	background: white;
-	width: 75%;
+	width: 100%;
 	margin: auto;
-	margin-top: 15px;
 	align-items: center;
 	display: flex;
 	flex-direction: column;
-	border: 2px solid black;
-	border-radius: 5px;
-	box-shadow: 0px 1px 2px black;
+	border-bottom: 2px solid black;
 	padding-bottom: 20px;
 	z-index: 1;
 }
@@ -65,24 +62,6 @@ a {
 #start:hover {
 	background-color: #c0cccf;
 	transition: background-color 0.5s;
-}
-
-#pictures {
-	margin-top: 25px;
-	display: flex;
-	justify-content: center;
-}
-
-#pictures .cell {
-	display: table-cell;
-	height: 200px;
-	margin: 20px;
-}
-
-#pictures .cell img {
-	border: 2px solid black;
-	border-radius: 5px;
-	height: 100%;
 }
 
 #bottombar {
