--- a/app/style/mobile.css
+++ b/app/style/mobile.css
@@ -46,6 +46,7 @@ button {
 	position: relative;
 	flex: 1 1 auto;
 	display: flex;
+	flex-direction: column-reverse;
 	justify-content: center;
 	align-items: center;
 	overflow: hidden;
@@ -60,12 +61,12 @@ button {
 }
 
 #chart {
-	width: 100%;
+	height: 100%;
 }
 
 #chart-div {
-	width: 28vw;
-	height: 100%;
+	width: 100%;
+	height: 20%;
 	padding-left: 15px;
 	padding-right: 15px;
 	pointer-events: none;
@@ -74,7 +75,7 @@ button {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-direction: column;
+	flex-direction: row;
 	z-index: 1;
 	overflow: hidden;
 }
@@ -98,6 +99,7 @@ button {
 #map-div {
 	width: 100%;
 	height: 80%;
+	flex: 1 1 auto;
 }
 
 #toolbar-div {
@@ -162,5 +164,9 @@ button {
 	color: black;
 	background-color: #cfcfcf;
 	box-shadow: 1px 1px 1px #000000;
+}
+
+#themeButton #chartButton #counterButton #addCandidateButton #moveButton #miscButton {
+	display = 'none';
 }
 
