--- a/app/style/style.css
+++ b/app/style/style.css
@@ -147,9 +147,10 @@ button {
 	display: none;
 	background-color: #ffffff;
 	border: 3px solid #000000;
-	border-radius: 2px;
-
+	border-radius: 15px;
+	
 	padding: 10px;
+	z-index: 10;
 
 	position: absolute;
 	left: 50%;
@@ -163,4 +164,3 @@ button {
 	background-color: #cfcfcf;
 	box-shadow: 1px 1px 1px #000000;
 }
-
