--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body {
-	background: #3d4147;
+	background: #F9F9FA;
 	font-family: 'Roboto';
 	padding: 0px;
 	margin: 0px;
@@ -16,7 +16,6 @@ body {
 	align-items: center;
 	display: flex;
 	flex-direction: column;
-	border-bottom: 2px solid black;
 	padding-bottom: 20px;
 	z-index: 1;
 }
@@ -25,7 +24,7 @@ body {
 	width: 100%;
 	text-align: center;
 	color: white;
-	background: #202225;
+	background: #151515;
 }
 
 .infobox {
@@ -35,6 +34,7 @@ body {
 }
 
 #welcome {
+
 }
 
 #whatsnew {
@@ -54,12 +54,20 @@ a {
 	background: white;
 	font-size: 50px;
 	text-align: center;
-	border: 2px solid black;
+	border: 0px solid black;
+	border-radius: 15px;
+	box-shadow: 0px 0px 2px black;
+
+	transition-timing-function: linear;
+	transition: all 125ms;
 }
 
 .start:hover {
-	background-color: #c0cccf;
-	transition: background-color 0.5s;
+	background-color: #eeeeff;
+	box-shadow: 0px 0px 10px blue;	
+	
+	transition-timing-function: linear;
+	transition: all 125ms;
 }
 
 #mobile { 
@@ -74,7 +82,7 @@ a {
 	font-size: 16px;
 	text-align: right;
 	text-decoration: none;
-	background: #202225;
+	background: #151515;
 	position: fixed;
 	width: 100%;
 	bottom: 0%;
