--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 	margin: auto;
 	align-items: center;
 	display: flex;
+	border-bottom: 1px solid black;
 	flex-direction: column;
 	padding-bottom: 20px;
 	z-index: 1;
@@ -64,7 +65,7 @@ a {
 
 .start:hover {
 	background-color: #eeeeff;
-	box-shadow: 0px 0px 10px blue;	
+	box-shadow: 0px 0px 8px blue;	
 	
 	transition-timing-function: linear;
 	transition: all 125ms;
