--- a/app/style/menu.css
+++ b/app/style/menu.css
@@ -3,14 +3,13 @@
 	background-color: #2f3136;
 	text-align: left;
 
-	box-shadow: 0px 2px 3px #000000;
-
 	position: relative;
 
-	display: flex;
+	display: inline-flex;
 	align-items: stretch;
 	flex-direction: row;
 	width: 100%;
+	padding-bottom: 1px;
 }
 
 #menu-left {
@@ -31,8 +30,7 @@
 }
 
 .click-button {
-	background-color: #eeeeee;
-	border-radius: 0px 0px 4px 4px;
+	background-color: #cdcdcd;
 	font-weight: 500;
 	color: #000000;
 	cursor: pointer;
