added margins to the start buttons

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ a {
 .start {
 	display: inline-block;
 	margin: auto;
-	margin-bottom: 15px;
+	margin-top: 15px;
 	padding-left: 10px;
 	padding-right: 10px;
 	background: white;
