--- a/app/style/popup.css
+++ b/app/style/popup.css
@@ -1,10 +1,9 @@
 .popup {
 	display: none;
 	background-color: #ffffff;
-	border: 3px solid #000000;
-	border-radius: 15px;
-	
-	padding: 10px;
+	border: 2px solid black;
+
+	padding: 6px;	
 	z-index: 10;
 
 	position: absolute;
@@ -17,5 +16,4 @@
 	border: none;
 	color: black;
 	background-color: #cfcfcf;
-	box-shadow: 1px 1px 1px #000000;
 }
