--- a/app/style/menu.css
+++ b/app/style/menu.css
@@ -29,7 +29,7 @@
 }
 
 .click-button {
-	background-color: #cdcdcd;
+	background-color: #f2eee6;
 	font-weight: 500;
 	color: #000000;
 	cursor: pointer;
