--- a/app/style/battlechart.css
+++ b/app/style/battlechart.css
@@ -34,7 +34,7 @@
 	background: #bf1d29;
 	transition: flex-basis 1s;
 	z-index: 1;
-	min-height: 0;
+	min-height: 0px;
 }
 
 #topbar-solid {
@@ -43,7 +43,7 @@
 	flex: 1 1 auto;
 	flex-basis: 0%;
 	transition: flex-basis 1s;
-	min-height: 0;
+	min-height: 0px;
 }
 
 #topbar-likely {
@@ -52,7 +52,7 @@
 	flex: 1 1 auto;
 	flex-basis: 0%;
 	transition: flex-basis 1s;
-	min-height: 0;
+	min-height: 0px;
 }
 
 #topbar-lean {
@@ -61,7 +61,7 @@
 	flex: 1 1 auto;
 	flex-basis: 0%;
 	transition: flex-basis 1s;
-	min-height: 0;
+	min-height: 0px;
 }
 
 #tossupbar {
