--- a/app/style/mobile.css
+++ b/app/style/mobile.css
@@ -56,6 +56,7 @@ button {
 #application {
 	position: relative;
 	flex: 1 1 auto;
+	height: 100%;
 	display: flex;
 	flex-direction: column-reverse;
 	justify-content: center;
