--- a/app/style/mobile.css
+++ b/app/style/mobile.css
@@ -1,14 +1,17 @@
 html {
 	background-color: black;
-	height: 100vh;
-	width: 100vw;
 	font-family: 'Roboto';
+	height: 100%;
+	width: 100%;
+	padding: 0px;
+	margin: 0px;
 }
 
 body {
 	background-color: #181922;
 	text-align: center;
 	margin: 0px;
+	padding: 0px;
 	height: 100%;
 	width: 100%;
 	
@@ -62,6 +65,8 @@ button {
 	justify-content: center;
 	align-items: center;
 	overflow: hidden;
+	padding: 0px;
+	margin: 0px;
 }
 
 #chart {
