--- a/app/style/style.css
+++ b/app/style/style.css
@@ -1,17 +1,21 @@
 html {
 	background-color: black;
 	font-family: 'Roboto';
-	height: 100vh;
-	width: 100vw;
+	height: 100%;
+	width: 100%;
+	padding: 0px;
+	margin: 0px;
 }
 
 canvas {
+
 }
 
 body {
 	background-color: #181922;
 	text-align: center;
 	margin: 0px;
+	padding: 0px;
 	height: 100%;
 	width: 100%;
 	
@@ -64,6 +68,8 @@ button {
 	justify-content: center;
 	align-items: center;
 	overflow: hidden;
+	padding: 0px;
+	margin: 0px;
 }
 
 #chart {
@@ -82,7 +88,7 @@ button {
 	align-items: center;
 	flex-direction: column;
 	z-index: 1;
-	overflow: hidden;
+	overflow: visible;
 }
 
 #logo {
@@ -98,6 +104,7 @@ button {
 #svgdata {
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
 }
 
 #map-div {
