--- a/app/style/style.css
+++ b/app/style/style.css
@@ -74,6 +74,7 @@ button {
 
 #chart {
 	width: 100%;
+	max-height: 100%;
 }
 
 #chart-div {
@@ -82,7 +83,8 @@ button {
 	padding-left: 15px;
 	padding-right: 15px;
 	pointer-events: none;
-	border: 1px solid black;
+	border-right: 1px solid black;
+	border-top: 1px solid black;
 	display: flex;
 	justify-content: center;
 	align-items: center;
