--- a/news/style.css
+++ b/news/style.css
@@ -1,20 +1,68 @@
 body {
 	background: #fffbf2;
+	background: white;
+	margin-left: 15vw;
+	margin-right: 15vw;
+	font-family: Times;
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
 }
 
 #header {
-	color: #ffffff;
-	background: #000000;
 	padding: 5px;
-	font-family: Roboto;
-	font-size: 28px;
+	font-size: 52px;
+	font-weight: bold;
 	text-align: center;
+	border-bottom-style: double;
+	margin-bottom: 10px;
+}
+
+#sub-header {
+	font-size: 16px;
+	font-weight: normal;
+}
+
+#application {
+	margin: 12px;
+	display: flex;
+	flex-direction: row;
 }
 
 #recent {
-	background: red;
+	display: flex;
+	flex-direction: column;
+	flex: 1;
 }
 
-#articles {
-	background: orange;
+#recent .article .article-title {
+	font-size: 22px;
+}
+
+.article {
+	border-bottom: 1px solid #cccccc;
+	margin: 10px;
+}
+
+.article:hover .article-snippet {
+	color: black;
+}
+
+.article-title {
+	padding: 3px;
+}
+
+.article-snippet {
+	padding: 10px;
+	color: #444444;
+}
+
+#featured {
+	flex: 1;
+}
+
+#featured .article .article-title {
+	font-size: 28px;
 }
